added sudoku page? will this work who knows

--- a/puzzle7.html
+++ b/puzzle7.html
@@ -57,8 +57,8 @@ You know.
 
   <script>
     const expectedNormalized = "tessamakaylaadorastellansantisky".trim().toLowerCase().replace(/\s+/g, "");
-    const chunk = "Marching b"; // hour (leftmost)
-    const nextPage = "complete.html";
+    const chunk = " b"; 
+    const nextPage = "puzzle8.html";
 
     const attemptsKey = "attempts_puzzle7";
     const HINT_THRESHOLD = 3;
