--- a/puzzle8.html
+++ b/puzzle8.html
@@ -432,7 +432,7 @@
   function onSolved(){
     stopTimer();
     $(".cell").css("box-shadow", "0 0 0 4px rgba(34,197,94,0.12)");
-    setTimeout(()=> { window.location.href = "complete.html"; }, 800);
+    setTimeout(()=> { window.location.href = "puzzle9.html"; }, 800);
   }
 
   // ====== Hover highlights (use separate class hover-same so selection-based same-number isn't removed) ======
