changed color(might not work)

--- a/puzzle8.html
+++ b/puzzle8.html
@@ -48,7 +48,7 @@
     .cell.peer { background: #fff7cc; }            /* same row/col/box as selected */
     .cell.conflict { background: #fecaca; }        /* incorrect flash */
     .cell.same-number { background: #fb923c; color: #fff; } /* same final number (selection-based) */
-    .cell.hover-same { background: #fbbf24; color: #fff; }  /* hover-based highlight (cleared separately) */
+    .cell.hover-same { background: #fbbf24; color: #000000; }  /* hover-based highlight (cleared separately) */
 
     @keyframes flashError { from { transform: scale(1.02);} to { transform: scale(1);} }
 
