--- a/puzzle7.html
+++ b/puzzle7.html
@@ -11,23 +11,57 @@
     <h1>Puzzle 7 — Finale</h1>
 
     <p class="clue">
-And now the finale
-You've made it quite far
-But the answer that's here
-Is a higher bar
-The answer is 1 0 000 000 01 11 01 101 01 1011 0100 01 000 1 0 0100 0100 01 10 01 100 111 010 01 000 01 10 1 00 000 101 1011
+Since It's clear only you two care
+About finishing these puzzles
+If you dare
+I've changed them around
+To fit your flair
 
-Whew!
-That's a lot
-But I'll give you some hints
-The answer is spelt
-Of some stones. and some sticks-
-The redhead knows it-- 
-Now you really-should-know-.
-If he were-here.
-He'd. be. helpful.
-You know.
+What do you enter
+When you get to a house
+Of one of you two
+And you put that together
+With another thing too
+The level I am at
+In only the best game
+That has a zoo
+…
+Oh you thought that was it?
+Oh no…
+Alas
+You’ll need a third thing
+It requires some class
+The third number is
+1001011
+
+And now that you have got 
+A, b, and c
+You'll need to solve this thing
+To get the information from me ;)
+
+
     </p>
+
+    <p class="meta">Variables: <strong>A = 1225</strong>, <strong>B = 23</strong>, <strong>C = 75</strong></p>
+
+    <section aria-labelledby="problem">
+      <div class="section-title" id="problem">Problem</div>
+      <p>
+        Let
+      </p>
+
+      <pre class="math">
+f(x) = A \ln\big(Bx + C\big)
+      </pre>
+
+      <p>
+        Find the integer <strong>D</strong> such that the slope of the tangent to \(f\) at \(x=D\) equals \(B\); that is,
+      </p>
+
+      <pre class="math">
+f'(D) = B.
+      </pre>
+    </section>
 
     <div class="input-row">
       <input id="answer" type="text" placeholder="Your answer">
