more more stuff

--- a/puzzle7.html
+++ b/puzzle7.html
@@ -25,6 +25,8 @@ With another thing too
 The level I am at
 In only the best game
 That has a zoo
+Don't know?
+That's a shame
 …
 Oh you thought that was it?
 Oh no…
