--- a/puzzle7.html
+++ b/puzzle7.html
@@ -5,6 +5,17 @@
   <title>Puzzle 7 — Finale</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <link rel="stylesheet" href="style.css">
+  <style>
+    pre.math{
+      background:#a65ad2;
+      padding:12px;
+      border-radius:8px;
+      border:1px solid #eef2ff;
+      overflow:auto;
+      color: white;
+      font-family: 'Courier New', Courier, monospace;
+    }
+  </style>
 </head>
 <body>
   <div class="container">
@@ -31,7 +42,7 @@ That's a shame
 Oh you thought that was it?
 Oh no…
 Alas
-You’ll need a third thing
+You'll need a third thing
 It requires some class
 The third number is
 1001011
@@ -43,9 +54,6 @@ To get the information from me ;)
 
 
     </p>
-
-    <p class="meta">Variables: <strong>A = 1225</strong>, <strong>B = 23</strong>, <strong>C = 75</strong></p>
-
     <section aria-labelledby="problem">
       <div class="section-title" id="problem">Problem</div>
       <p>
