math not rendering correctly

--- a/puzzle7.html
+++ b/puzzle7.html
@@ -61,7 +61,7 @@ To get the information from me ;)
       </p>
 
       <pre class="math">
-f(x) = A \ln\big(Bx + C\big)
+f(x) = A \ln\left(Bx + C\right)
       </pre>
 
       <p>
