more fixes again

--- a/puzzle7.html
+++ b/puzzle7.html
@@ -61,11 +61,11 @@ To get the information from me ;)
       </p>
 
       <pre class="math">
-f(x) = A \ln\left(Bx + C\right)
+f(x) = A ln(Bx + C)
       </pre>
 
       <p>
-        Find the integer <strong>D</strong> such that the slope of the tangent to \(f\) at \(x=D\) equals \(B\); that is,
+        Find the integer <strong>D</strong> such that the slope of the tangent to (f) at x=D equals (B); that is,
       </p>
 
       <pre class="math">
@@ -87,7 +87,7 @@ f'(D) = B.
     <div id="hintBox" class="reveal" style="display:none; margin-top:8px;">
       <div id="hint-content">
         <!-- Put your hint text for puzzle 7 here -->
-        Think about the . and - in the last 5 lines.
+         Compute the derivative f'(x) using the chain rule and simplify your expression in terms of A,B,C,x.
       </div>
     </div>
 
