--- a/puzzle7.html
+++ b/puzzle7.html
@@ -19,7 +19,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Puzzle 7 — Finale</h1>
+    <h1>Puzzle 7</h1>
 
     <p class="clue">
 Since It's clear only you two care
