--- a/puzzle7.html
+++ b/puzzle7.html
@@ -100,7 +100,7 @@ f'(D) = B.
   </div>
 
   <script>
-    const expectedNormalized = "tessamakaylaadorastellansantisky".trim().toLowerCase().replace(/\s+/g, "");
+    const expectedNormalized = "50".trim().toLowerCase().replace(/\s+/g, "");
     const chunk = " b"; 
     const nextPage = "puzzle8.html";
 
