--- a/puzzle7.html
+++ b/puzzle7.html
@@ -48,7 +48,7 @@ The third number is
 1001011
 
 And now that you have got 
-A, b, and c
+A, B, and C
 You'll need to solve this thing
 To get the information from me ;)
     </p>
@@ -97,7 +97,7 @@ f'(D) = B.
 
   <script>
     const expectedNormalized = "50".trim().toLowerCase().replace(/\s+/g, "");
-    const chunk = " b"; 
+    const chunk = "with Marching b"; 
     const nextPage = "puzzle8.html";
 
     const attemptsKey = "attempts_puzzle7";
