--- a/puzzle6.html
+++ b/puzzle6.html
@@ -42,6 +42,9 @@ class Main {
       <div id="hint-content">
         <!-- Put your hint text for puzzle 6 here -->
         You are entering what prints, or the name of the exception.
+        It's a trick question you idiots. Stellan, Ayush and Pranav you all are terrible programmers ;(. 
+        The array's length is 1, and we are trying to access index 3, which is out of bounds.
+        ArrayIndexOutOfBoundsException is the answer
       </div>
     </div>
 
