--- a/puzzle8.html
+++ b/puzzle8.html
@@ -138,6 +138,7 @@
           <strong>Controls:</strong><br>
           - Toggle <em>Candidate</em> to add/remove pencil marks.<br>
           - Wrong final numbers increment the error counter. After 3 errors the game locks.
+          - Sorry it is so buggy! I didn't have time to fix some of the bugs ;(
         </div>
       </div>
     </div>
