--- a/complete.html
+++ b/complete.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Final Reveal</h1>
+    <h1>Final Location and Time!!</h1>
 
     <div class="reveal" id="revealBox" style="font-size:1.1rem;"></div>
 
