--- a/complete.html
+++ b/complete.html
@@ -30,7 +30,7 @@
         box.textContent = arr.join("") || "[ nothing revealed yet ]";
         note.textContent = "Solve all puzzles to reveal the full meetup details.";
       } else {
-        const full = "Dos Pueblos High School Home Bleachers with " + arr.join("").trim(); // join and trim any accidental edges
+        const full = "Dos Pueblos High School Home Bleachers " + arr.join("").trim(); // join and trim any accidental edges
         box.textContent = "🎉 " + full + " 🎉";
         note.textContent = "See you there ;)";
       }
