--- a/complete.html
+++ b/complete.html
@@ -31,7 +31,7 @@
         note.textContent = "Solve all puzzles to reveal the full meetup details.";
       } else {
         const full = "Dos Pueblos High School Home Bleachers " + arr.join("").trim(); // join and trim any accidental edges
-        box.textContent = "🎉 " + full + " 🎉";
+        box.textContent = "🎉 " + "Dos Pueblos Home Bleachers, at 8:07PM on the 5th of September, 2025" + " 🎉";
         note.textContent = "See you there ;)";
       }
 
